# git-quick-add

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
