[package]
name = "git-quick-add"
version = "0.1.1"
edition = "2024"
authors = ["Andrew Fletcher"]
description = "Quickly add your files with the command `qa` using the interactive terminal."
readme = "README.md"
repository = "https://github.com/fletch-r/git-quick-add"
license = "MIT"
keywords = ["git", "commits", "add", "git-add", "cli"]

[dependencies]
console = "0.16.0"
dialoguer = "0.12.0"
git2 = "0.20.2"
tempfile = "3.21.0"

[[bin]]
name = "qa"          # this is the command name people will run
path = "src/main.rs"
